tests/sksl/errors/UndefinedFunction.glsl
### Compilation failed:

error: 3: function 'int foo(int x)' is not defined
void func() { int x = foo(1); }
                      ^^^^^^
1 error
